edit and Del in all forms finish

--- a/src/app/avaliation/CardioPulmunar/balke-ware/balke-ware.component.html
+++ b/src/app/avaliation/CardioPulmunar/balke-ware/balke-ware.component.html
@@ -13,8 +13,12 @@
                 <thead>
                     <tr>
                         <th>&nbsp;</th>
-                        <th class="th-top" *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</th>
-                        <th class="th-top" *ngIf="pointer>=0">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</th>
+                        <th class="th-top" *ngIf="pointer>=1 && !addEval">
+                            <button type="button">{{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}</button>
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">
+                            <button type="button">{{evaluation[pointer].data | date:'dd/LL/yyyy'}}</button>
+                        </th>
                         <th class="th-top" *ngIf="addEval">
                             <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
                         </th>
@@ -23,88 +27,154 @@
                 <tbody>
                     <tr>
                         <th i18n><span (click)="openDialog('Carga Teste')">Carga Teste</span></th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].carga | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].carga | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].carga | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].carga | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="carga" #carga="ngModel" [(ngModel)]="newEvaluation.carga" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 0</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min0 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min0 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min0 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min0 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min0" #min0="ngModel" [(ngModel)]="newEvaluation.min0" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 2</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min2 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min2 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min2 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min2" #min2="ngModel" [(ngModel)]="newEvaluation.min2" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min2 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min2" #min2="ngModel" [(ngModel)]="newEvaluation.min2" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min2" #min2="ngModel" [(ngModel)]="newEvaluation.min2" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 4</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min4 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min4 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min4 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min4" #min4="ngModel" [(ngModel)]="newEvaluation.min4" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min4 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min4" #min4="ngModel" [(ngModel)]="newEvaluation.min4" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min4" #min4="ngModel" [(ngModel)]="newEvaluation.min4" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 6</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min6 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min6 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min6 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min6 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min6" #min6="ngModel" [(ngModel)]="newEvaluation.min6" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 8</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min8 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min8 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min8 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min8 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min8" #min8="ngModel" [(ngModel)]="newEvaluation.min8" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 10</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min10 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min10 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min10 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min10 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min10" #min10="ngModel" [(ngModel)]="newEvaluation.min10" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 12</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min12 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min12 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min12 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min12 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min12" #min12="ngModel" [(ngModel)]="newEvaluation.min12" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 14</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min14 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min14 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min14 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min14" #min14="ngModel" [(ngModel)]="newEvaluation.min14" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min14 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min14" #min14="ngModel" [(ngModel)]="newEvaluation.min14" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min14" #min14="ngModel" [(ngModel)]="newEvaluation.min14" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 16</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min16 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min16 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min16 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min16" #min16="ngModel" [(ngModel)]="newEvaluation.min16" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min16 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min16" #min16="ngModel" [(ngModel)]="newEvaluation.min16" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min16" #min16="ngModel" [(ngModel)]="newEvaluation.min16" type="number">
                         </td>
                     </tr>
                     <tr>
                         <th i18n>FC ao minuto 18</th>
-                        <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].min18 | number: '': locale}}</td>
-                        <td *ngIf="pointer>=0">{{evaluation[pointer].min18 | number: '': locale}}</td>
+                        <td *ngIf="pointer>=1 && !addEval && editPointer!=1">{{evaluation[pointer-1].min18 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==1 && editAv">
+                            <input name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="number" (focus)="$event.target.select()">
+                        </td>
+                        <td *ngIf="pointer>=0 && editPointer!=0">{{evaluation[pointer].min18 | number: '': locale}}</td>
+                        <td *ngIf="editPointer==0 && editAv">
+                            <input name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="number" (focus)="$event.target.select()">
+                        </td>
                         <td *ngIf="addEval">
                             <input name="min18" #min18="ngModel" [(ngModel)]="newEvaluation.min18" type="number">
                         </td>
@@ -146,19 +216,33 @@
                         <td *ngIf="pointer>=0">{{evaluation[pointer].c_vo2e | number: '': locale}}</td>
                         <td *ngIf="addEval">&nbsp;</td>
                     </tr>
+                    <tr>
+                        <th>Ações</th>
+                        <td *ngIf="pointer>=1 && !addEval">
+                            <app-edit-del-form *ngIf="(editPointer==1 && editAv) || !editAv"
+                                [dataAv]="evaluation[pointer-1].data"
+                                (action)="executeAction($event, evaluation[pointer-1], 1)"></app-edit-del-form>
+                        </td>
+                        <td *ngIf="pointer>=0 && !addEval">
+                            <app-edit-del-form *ngIf="(editPointer==0 && editAv) || !editAv"
+                                [dataAv]="evaluation[pointer].data"
+                                (action)="executeAction($event, evaluation[pointer], 0)"></app-edit-del-form>
+                        </td>
+                        <td *ngIf="addEval">&nbsp;</td>
+                    </tr>
                 </tbody>
             </table>
             <em>*Frequência Cardiaca (FC) em batimentos por minuto (bpm)</em>
             
             <div class="action">
-                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1 || editAv" mat-mini-fab color="default"
                     (click)="pointer=pointer-1">
                     <mat-icon class="mat-14">chevron_left</mat-icon>
                 </button>
-                <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
+                <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv" (click)="addEvaluation()">
                     <mat-icon class="mat-18">add</mat-icon>
                 </button>
-                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv"
                     mat-mini-fab color="default" (click)="pointer=pointer+1">
                     <mat-icon class="mat-14">chevron_right</mat-icon>
                 </button>
