--- a/src/app/commun/dialog-medidas-db.html
+++ b/src/app/commun/dialog-medidas-db.html
@@ -10,7 +10,7 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label *ngIf="erroPeso" style="color: red;">Peso</mat-label>
-    <mat-label *ngIf="!erroPeso">Peso</mat-label>
+    <mat-label *ngIf="!erroPeso">Peso Corporale</mat-label>
     <input matInput type="number" [(ngModel)]="ev.peso" placeholder="Kg">
   </mat-form-field>
   <mat-form-field class="input-sm">
